DuPont DevSB/src/objects/FF_PSA_Skill_Badge__c.object
<CustomObject>
    <fields>
        <fullName>FF_PSA_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Skill_Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Skill_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill Name</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Skill_Rating__c</fullName>
        <label>Skill Rating</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Skill Badge</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Badges</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FF_PSA_Badge_Certification</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISPICKVAL(FF_PSA_Certification__r.pse__Group__c,&apos;Badge&apos;)),true,False)</errorConditionFormula>
        <errorMessage>Certification Should be a Master Badge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Badge_Skill</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL( FF_PSA_Skill_Name__r.pse__Group__c ,&apos;Badge&apos;)),true,False)</errorConditionFormula>
        <errorMessage>Skill Should Not be a Master Badge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Badge_Skill_Rating</fullName>
        <active>true</active>
        <errorConditionFormula>if(((FF_PSA_Skill_Rating__c&lt;1) ||(FF_PSA_Skill_Rating__c&gt;5)),true,false)</errorConditionFormula>
        <errorMessage>Please Enter Skill Rating Greater Than 0 And Less Than 6</errorMessage>
    </validationRules>
</CustomObject>